examples/test/testpolicy17380.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17380
  namespace: namespace391
spec:
  podSelector:
    matchLabels:
      key20: value27
      key25: value1
      key5: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value11
          key3: value19
          key7: value16
      podSelector:
        matchLabels:
          key33: value42
